--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,2 +1,47 @@
-<h1>Admin::Customers#edit</h1>
-<p>Find me in app/views/admin/customers/edit.html.erb</p>
+<div>
+  <div>
+    <h2><%= @customer.last_name+@cutomer.first_name %>さんの会員情報編集</h2>
+  </div>
+  <div>
+    <%= form_with model: @cutomer, local: true do |t| %>
+    <div>
+      <p>会員ID</p>
+      <%= @customer.id %>
+    </div>
+    <div>
+      <p>氏名</p>
+      <%= t.text_field :last_name %>
+      <%= t.text_field :first_name %>
+    </div>
+    <div>
+      <p>フリガナ</p>
+      <%= t.text_field :last_name_kana %>
+      <%= t.text_field :first_name_kana %>
+    </div>
+    <div>
+      <p>郵便郵便番号</p>
+      <%= t.text_field :postal_code %>
+    </div>
+    <div>
+      <p>住所</p>
+      <%= t.text_field :address %>
+    </div>
+    <div>
+      <p>電話番号</p>
+      <%= t.text_field :telephone_number %>
+    </div>
+    <div>
+      <p>メールアドレス</p>
+      <%= t.text_field :email %>
+    </div>
+    <div>
+      <p>会員ステータス</p>
+      <%= t.radio_button :is_deleted, "false" %>
+        <%= t.label :is_deleted, "有効" %>
+      <%= t.radio_button :is_deleted, "true" %>
+        <%= t.label :is_deleted, "退会" %>
+    </div>
+    <%= t.submit "変更を保存" %>
+    <% end %>
+  </div>
+</div>
