--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,2 +1,32 @@
-<h1>Admin::Customers#index</h1>
-<p>Find me in app/views/admin/customers/index.html.erb</p>
+<div>
+  <div>
+    <h2>会員一覧</h2>
+  </div>
+  <div>
+    <table>
+      <thead>
+        <tr>
+          <td>会員ID</td>
+          <td>氏名</td>
+          <td>メールアドレス</td>
+          <td>ステータス</td>
+        </tr>
+      </thead>
+      <tbody>
+        <% @customers.each do |t| %>
+        <tr>
+          <td><%= t.id %></td>
+          <td><%= t.last_name+t.first_name %></td>
+          <td><%= t.email %></td>
+          <% if t.is_deleted == false %>
+            <td>有効</td>
+          <% else %>
+            <td>退会</td>
+          <% end %>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+    <% paginate @customers 
+  </div>
+</div>
