--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,2 +1,45 @@
-<h1>Admin::Customers#show</h1>
-<p>Find me in app/views/admin/customers/show.html.erb</p>
+<div>
+  <div>
+    <h3><%= @customer.last_name+@customer.first_name %>さんの会員詳細</h3>
+  </div>
+  <div>
+    <div>
+      <p>会員ID</p>
+      <%= @customer.id %>
+    </div>
+    <div>
+      <p>氏名</p>
+      <p><%= @customer.last_name %>　<%= @customer.first_name %></p>
+    </div>
+    <div>
+      <p>フリガナ</p>
+      <%= @customer.last_name_kana %>　<%= @customer.first_name_kana %>
+    </div>
+    <div>
+      <p>郵便番号</p>
+      <%= @cutomer.postal_code %>
+    </div>
+    <div>
+      <p>住所</p>
+      <%= @customer.address %>
+    </div>
+    <div>
+      <p>電話番号</p>
+      <%= @customer.telephone_number %>
+    </div>
+    <div>
+      <p>メールアドレス</p>
+      <%= @customer.email %>
+    </div>
+    <div>
+      <p>会員ステータス</p>
+      <% if @cutomer.is_deleted == false %>
+        <p>有効</p>
+      <% else %>
+        <p>退会</p>
+      <% end %>
+    </div>
+    <%= link_to "編集する", edit_admin_customer_path(@customer) %>
+    <%= link_to "注文履歴一覧を見る", admin_order_path(@customer) %>
+  </div>
+</div>
