--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,2 +1,12 @@
-<h1>Admin::Genres#edit</h1>
-<p>Find me in app/views/admin/genres/edit.html.erb</p>
+<div>
+  <h2>ジャンル編集</h2>
+  <div>
+    <p>ジャンル名</p>
+    <%= form_with model: @genre, local: true do |t| %>
+      <%= t.text_field :name %>
+      <%= t.submit "変更を保存する" %>
+    <% end %>
+  </div>
+</div>
+
+
