--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,2 +1,33 @@
-<h1>Admin::Genres#index</h1>
-<p>Find me in app/views/admin/genres/index.html.erb</p>
+<div>
+    <h2>ジャンル一覧･追加</h2>
+    <div>
+    <h3>ジャンル名</h3>
+        <%= form_with model: @new_genre, local: true do |t| %>
+            <% t.text_field :name %>
+            <% t.submit "新規登録" %>
+        <% end %>
+    </div>
+    <div>
+        <table>
+            <thead>
+                <tr>
+                    <td>ジャンル</td>
+                    <td></td>
+                </tr>
+            </thead>
+            <tbody>
+                <% @genre.each do |a| %>
+                <tr>
+                    <td><%= a.name %></td>
+                    <td><%= link_to "編集する", edit_admin_ganere %></td>
+                </tr>
+                <% end %>
+            </tbody>
+        </table>
+    </div>
+
+</div>
+
+
+
+
