--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,2 +1,34 @@
-<h1>Admin::Items#index</h1>
-<p>Find me in app/views/admin/items/index.html.erb</p>
+<div>
+  <div>
+    <h2>商品一覧</h2>
+  </div>
+  <div>
+    <table>
+      <thead>
+        <tr>
+          <td>商品ID</td>
+          <td>商品名</td>
+          <td>税抜価格</td>
+          <td>ジャンル</td>
+          <td>ステータス</td>
+        </tr>
+      </thead>
+      <tbody>
+        <% @items.each do |t| %>
+          <tr>
+            <td><%= t.id %></td>
+            <td><%= t.name %></td>
+            <td><%= t.price %></td>
+            <td><%= t.genre %></td>
+            <% if t.is_active == true %>
+              <td>販売中</td>
+            <% else %>
+              <td>販売停止</td>
+            <% end %>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+  <%= paginate @items %>
+</div>
