--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,2 +1,38 @@
-<h1>Admin::Items#show</h1>
-<p>Find me in app/views/admin/items/show.html.erb</p>
+<div>
+    <div>
+        <h2>商品詳細</h2>
+    </div>
+    <div>
+        <div>
+            <%= attachment_image_tag @item, :image, size:"100x100",format:'jpg' %>
+        </div>
+        <div>
+            <div>
+                <p>商品名</p>
+                <%= @item.name %>
+            </div>
+            <div>
+                <p>商品説明</p>
+                <%= @item.introduction %>
+            </div>
+            <div>
+                <p>ジャンル</p>
+                <%= @item.genre.id %>
+            </div>
+            <div>
+                <p>税込価格<br>
+                (税抜価格）</p>
+                <p><%= @item.with_price %>(<%= @item.price %>)円</p>
+            </div>
+            <div>
+                <p>販売ステータス</p>
+                <% if @item.is_active == true %>
+                    <p>販売中</p>
+                <% else %>
+                    <p>販売停止</p>
+                <% end %>
+            </div>
+        </div>
+        <%= link_to "編集する", edit_admin_item_path(@item) %>
+    </div>
+</div>
