--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>NaganoCake</title>
+    <meta charset="UTF-8">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -13,7 +14,7 @@
     <header>
       <nav>
         <div>
-          <h2>LOGO</h2>
+          <h1>LOGO</h1>
         </div>
         <div>
           <ul>
@@ -31,7 +32,20 @@
                 <%= link_to "ジャンル一覧", admin_ganeres_path %>
               </li>
               <li>
-                <%- link_to "ログアウト", destroy_admin_session_path %>
+                <%- link_to "ログアウト", destroy_admin_session_path, method: :delete %>
+              </li>
+            <% elseif customer_signed_in? %>
+              <li>
+                <%= link_to "マイページ", my_page_path %>
+              </li>
+              <li>
+                <%= link_to "商品一覧", items_path %>
+              </li>
+              <li>
+                <%= link_to "カート", cart_items_path %>
+              </li>
+              <li>
+                <%= link_to"ログアウト", destroy_customer_session_path,  method: :delete %>
               </li>
             <% else %>
               <li>
@@ -47,9 +61,6 @@
                 <%= link_to"ログイン", new_admin_session_path %>
               </li>
             <% end %>
-            <% if customer_signed_in? %>
-            <% else %>
-            <% end %>
           </ul>
         </div>
       </nav>
@@ -61,7 +72,7 @@
     </main>
 
     <footer>
-
+      <div></div>
     </footer>
   </body>
 </html>
