--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,2 +1,69 @@
-<h1>Admin::Orders#show</h1>
-<p>Find me in app/views/admin/orders/show.html.erb</p>
+<div>
+  <div>
+    <h2>注文履歴詳細</h2>
+  </div>
+  <div>
+    <div>
+      <p>購入者</p>
+      <%= redirect_to admin_customer_path(@order.customer) do %>
+        <%= @order.last_name+@order.first_name %>
+      <% end %>
+    </div>
+    <div>
+      <p>注文日</p>
+      <%= l @order.created_at, format: :short %>
+    </div>
+    <div>
+      <p>配送先</p>
+      <p>〒<%= @order.postal_code %> <%= @order.address %><br>
+      <%= @order.name %>
+    </div>
+    <div>
+      <p>支払方法</p>
+      <%= @order.payment_method %>
+    </div>
+    <div>
+      <p>注文ステータス</p>
+      <%= @order.order_status %>
+    </div>
+    <div>
+      <table>
+        <thead>
+          <tr>
+            <td>商品名</td>
+            <td>単価(税込)</td>
+            <td>数値</td>
+            <td>小計</td>
+            <td>制作ステータス</td>
+            <td></td>
+          </tr>
+        </thead>
+        <tbody>
+          <% @order.order_details.each do |t| %>
+          <tr>
+            <td><%= t.item.name %></td>
+            <td><%= t.price %></td>
+            <td><%= t.price*t.amount %></td>
+            <td><%= t.making_status %></td>
+            <td><%= link_to "更新", admin_order_detail_update_path(t.id), method: :patch %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  <div>
+    <div>
+      <p>商品合計</p>
+      <p><%= @order.total_payment-@order.postage %>円</p>
+    </div>
+    <div>
+      <p>送料</p>
+      <p><%= @order.postage %>円</p>
+    </div>
+    <div>
+      <p>請求金額</p>
+      <p><%= @order.total_payment %>円</p>
+    </div>
+  </div>
+</div>
