--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -17,7 +17,7 @@
             </div>
             <div>
                 <p>ジャンル</p>
-                <%= @item.genre.id %>
+                <%= @item.genre.name %>
             </div>
             <div>
                 <p>税込価格<br>
