--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,12 +29,12 @@
                 <%= link_to "注文履歴一覧", admin_root_path %>
               </li>
               <li>
-                <%= link_to "ジャンル一覧", admin_ganeres_path %>
+                <%= link_to "ジャンル一覧", admin_genres_path %>
               </li>
               <li>
-                <%- link_to "ログアウト", destroy_admin_session_path, method: :delete %>
+                <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
               </li>
-            <% elseif customer_signed_in? %>
+            <% elsif customer_signed_in? %>
               <li>
                 <%= link_to "マイページ", my_page_path %>
               </li>
@@ -55,10 +55,10 @@
                 <%= link_to "商品一覧", items_path %>
               </li>
               <li>
-                <%= link_to "新規登録", new_admin_registration_path %>
+                <%= link_to "新規登録", new_customer_registration_path %>
               </li>
               <li>
-                <%= link_to"ログイン", new_admin_session_path %>
+                <%= link_to"ログイン", new_customer_session_path %>
               </li>
             <% end %>
           </ul>
