--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -3,7 +3,7 @@
     <h2><%= @customer.last_name+@cutomer.first_name %>さんの会員情報編集</h2>
   </div>
   <div>
-    <%= form_with model: @cutomer, local: true do |t| %>
+    <%= form_with model: [:admin, @cutomer], local: true do |t| %>
     <div>
       <p>会員ID</p>
       <%= @customer.id %>
