--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -13,7 +13,7 @@
         </tr>
       </thead>
       <tbody>
-        <%= @orders.each do |t| %>
+        <% @orders.each do |t| %>
           <tr>
             <td>
               <%= link_to admin_order_path do %>
@@ -27,6 +27,6 @@
         <% end %>
       </tbody>
     </table>
-    <% paginate @orders %>
+    <%= paginate @orders %>
   </div>
 </div>
