--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -4,7 +4,7 @@
 </div>
 
 <div>
-  <%= form_with model: @item, local: true do |t| %>
+  <%= form_with model: [:admin, @item], local: true do |t| %>
     <div>
       <p>商品画像</p>
       <%= t.attachment_field :image %>
@@ -19,7 +19,7 @@
     </div>
     <div>
       <p>ジャンル</p>
-      <%= t.select :genre, options_from_collection_for_select(Genre.all, :id, :name) %>
+      <%= t.select :genre_id, options_from_collection_for_select(Genre.all, :id, :name) %>
     </div>
     <div>
       <p>税抜価格</p>
