--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,8 +1,8 @@
 <div>
   <div>
     <h2>商品一覧</h2>
-    <button>
-    <%= link_to "+", new_admin_item_path %>
+    <button class="btn rounded-circle btn-outline-light shadow-sm">
+    <%= link_to "＋", new_admin_item_path, class:"item-add text-secondary" %>
     </button>
   </div>
   <div>
