--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,62 +6,64 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <meta name="viewport" content="width=devise-width,initial-scale=1.0" >
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
     <header>
-      <nav>
-        <div>
-          <h1>LOGO</h1>
-        </div>
-        <div>
-          <ul>
-            <% if admin_signed_in? %>
-              <li>
-                <%= link_to "商品一覧", admin_items_path %>
-              </li>
-              <li>
-                <%= link_to "会員一覧", admin_customers_path %>
-              </li>
-              <li>
-                <%= link_to "注文履歴一覧", admin_root_path %>
-              </li>
-              <li>
-                <%= link_to "ジャンル一覧", admin_genres_path %>
-              </li>
-              <li>
-                <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
-              </li>
-            <% elsif customer_signed_in? %>
-              <li>
-                <%= link_to "マイページ", my_page_path %>
-              </li>
-              <li>
-                <%= link_to "商品一覧", items_path %>
-              </li>
-              <li>
-                <%= link_to "カート", cart_items_path %>
-              </li>
-              <li>
-                <%= link_to"ログアウト", destroy_customer_session_path,  method: :delete %>
-              </li>
-            <% else %>
-              <li>
-                <%= link_to "About", about_path %>
-              </li>
-              <li>
-                <%= link_to "商品一覧", items_path %>
-              </li>
-              <li>
-                <%= link_to "新規登録", new_customer_registration_path %>
-              </li>
-              <li>
-                <%= link_to"ログイン", new_customer_session_path %>
-              </li>
-            <% end %>
-          </ul>
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+          <h1>
+            <%= link_to "LOGO", items_path, class:"navbar-brand nav-logo" %>
+          </h1>
+
+            <div class="navbar-nav navbar-right">
+              <% if admin_signed_in? %>
+                <button class="btn btn-outline-secondary nav-item">
+                  <%= link_to "商品一覧", admin_items_path, class:"text-dark"; %>
+                </button>
+                <button class="btn btn-outline-secondary nav-item">
+                  <%= link_to "会員一覧", admin_customers_path, class:"text-dark"; %>
+                </button>
+                <button class="btn btn-outline-secondary nav-item">
+                  <%= link_to "注文履歴一覧", admin_root_path, class:"text-dark"; %>
+                </button>
+                <button class="btn btn-outline-secondary nav-item">
+                  <%= link_to "ジャンル一覧", admin_genres_path, class:"text-dark"; %>
+                </button>
+                <button class="btn btn-outline-secondary nav-item">
+                  <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class:"text-dark"; %>
+                </button>
+              <% elsif customer_signed_in? %>
+                <button class="btn btn-outline-secondary nav-item ">
+                  <%= link_to "マイページ", my_page_path, class:"text-dark"; %>
+                </button>
+                <button class="btn btn-outline-secondary nav-item">
+                  <%= link_to "商品一覧", items_path, class:"text-dark"; %>
+                </button>
+                <button class="btn btn-outline-secondary nav-item ">
+                  <%= link_to "カート", cart_items_path, class:"text-dark"; %>
+                </button>
+                <button class="btn btn-outline-secondary nav-item ">
+                  <%= link_to"ログアウト", destroy_customer_session_path,  method: :delete, class:"text-dark"; %>
+                </button>
+              <% else %>
+                <button class="btn btn-outline-secondary btn-light nav-item">
+                  <%= link_to "About", about_path, class:"text-dark"; %>
+                </button>
+                <button class="btn btn-outline-secondary btn-light nav-item">
+                  <%= link_to "商品一覧", items_path, class:"text-dark"; %>
+                </button>
+                <button class="btn btn-outline-secondary btn-light nav-item">
+                  <%= link_to "新規登録", new_customer_registration_path, class:"text-dark"; %>
+                </button>
+                <button class="btn btn-outline-secondary btn-light nav-item">
+                  <%= link_to"ログイン", new_customer_session_path, class:"text-dark"; %>
+                </button>
+              <% end %>
+            </div>
         </div>
       </nav>
 
