--- a/app/assets/stylesheets/admin/items.scss
+++ b/app/assets/stylesheets/admin/items.scss
@@ -1,3 +1,34 @@
 // Place all the styles related to the admin/items controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.item-add{
+  font-size:25px;
+}
+
+.item-add:hover{
+  text-decoration:none;
+}
+
+.table{
+  margin:10px 80px;
+}
+thead{
+  background-color:whitesmoke;
+}
+
+thead th{
+  border-top:1px solid #dee2e6;
+  border-bottom:1px solid #dee2e6;
+}
+
+.introduction{
+  height:150px;
+}
+
+#item_genre_id{
+  width:100%;
+}
+
+p{
+  padding:0.25rem;
+}
