--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,38 +1,69 @@
-<div>
-<div>
-  <h2>商品編集</h2>
+<div class="container m-0 p-0">
+  <div class="row mb-4 align-items-center">
+    <div class="col-2 offset-2">
+      <h5 class="text-center m-0" style="background-color:whitesmoke;">商品編集</h5>
+    </div>
+  </div>
 </div>
 
-<div>
-  <%= form_with model: [:admin, @item], local: true do |t| %>
-    <div>
-      <p>商品画像</p>
-      <%= t.attachment_field :image %>
+<div class="container m-2">
+  <div class="d-flex justify-content-center">
+  <%= form_with model: [:admin, @item], local: true , class:"w-100" do |t| %>
+    <div class="row">
+      <div class="col-2 offset-md-3">
+        <p>商品画像</p>
+      </div>
+      <div class="col-4">
+        <%= t.attachment_field :image %>
+      </div>
     </div>
-    <div>
-      <p>商品名</p>
-      <%= t.text_field :name, placeholder:"商品名" %>
+    <div class="row">
+      <div class="col-2 offset-md-3">
+        <p>商品名</p>
+      </div>
+      <div class="col-4">
+        <%= t.text_field :name, placeholder:"商品名", class:"w-100" %>
+      </div>
     </div>
-    <div>
-      <p>商品説明</p>
-      <%= t.text_area :introduction, placeholder:"ここに説明文を記述します" %>
+    <div class="row">
+      <div class="col-2 offset-md-3">
+        <p>商品説明</p>
+      </div>
+      <div class="col-4">
+        <%= t.text_area :introduction, placeholder:"ここに説明文を記述します", class:"w-100 introduction" %>
+      </div>
     </div>
-    <div>
-      <p>ジャンル</p>
-      <%= t.select :genre_id, options_from_collection_for_select(Genre.all, :id, :name) %>
+    <div class="row">
+      <div class="col-2 offset-md-3">
+        <p>ジャンル</p>
+      </div>
+      <div class="col-4">
+        <%= t.select :genre_id, options_from_collection_for_select(Genre.all, :id, :name), class:"w-100" %>
+      </div>
     </div>
-    <div>
-      <p>税抜価格</p>
-      <%= t.text_field :price %><p>円</p>
+    <div class="row">
+      <div class="col-2 offset-md-3">
+        <p>税抜価格</p>
+      </div>
+      <div class="col-4">
+        <%= t.text_field :price, placeholder:"1000", class:"w-100"%>
+      </div>
+      <span class="pt-1">円</span>
     </div>
-    <div>
-      <p>販売ステータス</p>
-      <%= t.radio_button :is_active, "true" %>
-      <%= t.label :is_active, "販売中" %>
-      <%= t.radio_button :is_active, "false" %>
-      <%= t.label :is_active, "販売停止" %>
+    <div class="row">
+      <div class="col-2 offset-md-3">
+        <p>販売ステータス</p>
+      </div>
+      <div class="col-4">
+        <%= t.radio_button :is_active, "true" %>
+        <%= t.label :is_active, "販売中", class:"radio-inline" %>
+        <%= t.radio_button :is_active, "false" %>
+        <%= t.label :is_active, "販売停止中", class:"radio-inline" %>
+      </div>
     </div>
-    <%= t.submit "変更を保存" %>
-  <% end %>
-</div>
+  </div>
+      <div class="d-flex justify-content-center">
+        <%= t.submit "変更を保存", class:"btn btn-success px-4 py-2" %>
+      </div>
+    <% end %>
 </div>
