--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,52 +16,41 @@
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
           <h1>
-            <%= link_to "LOGO", items_path, class:"navbar-brand nav-logo" %>
+            <%= link_to "LOGO", items_path, class:"navbar-brand nav-logo " %>
           </h1>
 
             <div class="navbar-nav navbar-right">
               <% if admin_signed_in? %>
-                <button class="btn btn-outline-secondary nav-item">
-                  <%= link_to "商品一覧", admin_items_path, class:"text-dark"; %>
-                </button>
-                <button class="btn btn-outline-secondary nav-item">
-                  <%= link_to "会員一覧", admin_customers_path, class:"text-dark"; %>
-                </button>
-                <button class="btn btn-outline-secondary nav-item">
-                  <%= link_to "注文履歴一覧", admin_root_path, class:"text-dark"; %>
-                </button>
-                <button class="btn btn-outline-secondary nav-item">
-                  <%= link_to "ジャンル一覧", admin_genres_path, class:"text-dark"; %>
-                </button>
-                <button class="btn btn-outline-secondary nav-item">
-                  <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class:"text-dark"; %>
-                </button>
+                  <%= link_to "商品一覧", admin_items_path, class:"btn btn-outline-secondary nav-item text-dark"; %>
+
+                  <%= link_to "会員一覧", admin_customers_path, class:"btn btn-outline-secondary nav-item text-dark"; %>
+
+                  <%= link_to "注文履歴一覧", admin_root_path, class:"btn btn-outline-secondary nav-item text-dark"; %>
+
+                  <%= link_to "ジャンル一覧", admin_genres_path, class:"btn btn-outline-secondary nav-item text-dark"; %>
+
+                  <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class:"btn btn-outline-secondary nav-item text-dark"; %>
+
               <% elsif customer_signed_in? %>
-                <button class="btn btn-outline-secondary nav-item ">
-                  <%= link_to "マイページ", my_page_path, class:"text-dark"; %>
-                </button>
-                <button class="btn btn-outline-secondary nav-item">
-                  <%= link_to "商品一覧", items_path, class:"text-dark"; %>
-                </button>
-                <button class="btn btn-outline-secondary nav-item ">
-                  <%= link_to "カート", cart_items_path, class:"text-dark"; %>
-                </button>
-                <button class="btn btn-outline-secondary nav-item ">
-                  <%= link_to"ログアウト", destroy_customer_session_path,  method: :delete, class:"text-dark"; %>
-                </button>
+
+                  <%= link_to "マイページ", my_page_path, class:"btn btn-outline-secondary nav-item text-dark"; %>
+
+                  <%= link_to "商品一覧", items_path, class:"btn btn-outline-secondary nav-item text-dark"; %>
+
+                  <%= link_to "カート", cart_items_path, class:"btn btn-outline-secondary nav-item text-dark"; %>
+
+                  <%= link_to"ログアウト", destroy_customer_session_path,  method: :delete, class:"btn btn-outline-secondary nav-item text-dark"; %>
+
               <% else %>
-                <button class="btn btn-outline-secondary btn-light nav-item">
-                  <%= link_to "About", about_path, class:"text-dark"; %>
-                </button>
-                <button class="btn btn-outline-secondary btn-light nav-item">
-                  <%= link_to "商品一覧", items_path, class:"text-dark"; %>
-                </button>
-                <button class="btn btn-outline-secondary btn-light nav-item">
-                  <%= link_to "新規登録", new_customer_registration_path, class:"text-dark"; %>
-                </button>
-                <button class="btn btn-outline-secondary btn-light nav-item">
-                  <%= link_to"ログイン", new_customer_session_path, class:"text-dark"; %>
-                </button>
+
+                  <%= link_to "About", about_path, class:"btn btn-outline-secondary nav-item text-dark"; %>
+
+                  <%= link_to "商品一覧", items_path, class:"btn btn-outline-secondary nav-item text-dark"; %>
+
+                  <%= link_to "新規登録", new_customer_registration_path, class:"btn btn-outline-secondary nav-item text-dark"; %>
+
+                  <%= link_to"ログイン", new_customer_session_path, class:"btn btn-outline-secondary nav-item text-dark"; %>
+
               <% end %>
             </div>
         </div>
