--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,9 +1,9 @@
 <div>
   <div>
-    <h2><%= @customer.last_name+@cutomer.first_name %>さんの会員情報編集</h2>
+    <h2><%= @customer.last_name %><%= @customer.first_name %>さんの会員情報編集</h2>
   </div>
   <div>
-    <%= form_with model: [:admin, @cutomer], local: true do |t| %>
+    <%= form_with model: [:admin, @customer], local: true do |t| %>
     <div>
       <p>会員ID</p>
       <%= @customer.id %>
