--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,14 +1,13 @@
 <div class="container m-0 p-0">
-  <div class="row mb-4 align-items-center">
+  <div class="row mb-5 align-items-center">
     <div class="col-2 offset-2">
       <h5 class="text-center m-0" style="background-color:whitesmoke;">商品編集</h5>
     </div>
   </div>
 </div>
 
-<div class="container m-2">
-  <div class="d-flex justify-content-center">
-  <%= form_with model: [:admin, @item], local: true , class:"w-100" do |t| %>
+<%= form_with model: [:admin, @item], local: true  do |t|  %>
+<div class="container">
     <div class="row">
       <div class="col-2 offset-md-3">
         <p>商品画像</p>
@@ -61,7 +60,6 @@
         <%= t.label :is_active, "販売停止中", class:"radio-inline" %>
       </div>
     </div>
-  </div>
       <div class="d-flex justify-content-center">
         <%= t.submit "変更を保存", class:"btn btn-success px-4 py-2" %>
       </div>
