--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,125 @@
-<h2>Sign up</h2>
+<div class="container m-0 p-0">
+  <div class="row mb-4 align-items-center">
+    <div class="col-3 offset-2">
+      <h5 class="text-center m-0" style="background-color:whitesmoke;">新規会員登録</h5>
+    </div>
+  </div>
+</div>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<div class="container">
+  <%= form_with model: @customer, url: customer_registration_path, id: 'new_customer', class: 'new_customer',local: true do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  <div class="field mb-2">
+    <div class="row">
+      <div class="col-3">
+        <p class="pt-1 mb-0">名前</p>
+      </div>
+      <div class="col-1 text-right pr-1">
+        <%= f.label "(姓)", class:"mb-0" %>
+      </div>
+      <div class="col-3 px-0">
+        <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name", placeholder: "令和", class:"w-100"; %>
+      </div>
+      <div class="col-1 text-right  pr-1">
+        <%= f.label "(名)", class:"mb-0" %>
+      </div>
+      <div class="col-3  px-0">
+        <%= f.text_field :fist_name, autofocus: true, autocomplete: "fist_name", placeholder: "道子", class:"w-100"; %>
+      </div>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+  <div class="field mb-2">
+    <div class="row">
+      <div class="col-3">
+        <p class="pt-1 mb-0">フリガナ</p>
+      </div>
+      <div class="col-1 text-right  pr-1">
+        <%= f.label "(セイ)", class:"mb-0" %>
+      </div>
+      <div class="col-3  px-0">
+        <%= f.text_field :last_name_kana, autofocus: true, autocomplete: "last_name_kana", placeholder: "レイワ", class:"w-100"; %>
+      </div>
+      <div class="col-1 text-right  pr-1">
+        <%= f.label "(メイ)", class:"mb-0" %>
+      </div>
+      <div class="col-3  px-0">
+        <%= f.text_field :fist_name_kana, autofocus: true, autocomplete: "fist_name_kana", placeholder: "ミチコ", class:"w-100"; %>
+      </div>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <div class="field mb-2">
+    <div class="row">
+      <div class="col-3">
+        <%= f.label "メールアドレス", class:"mb-0" %>
+      </div>
+      <div class="col-3 offset-1  px-0">
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "sample@example.com", class:"w-100"; %>
+      </div>
+    </div>
+  </div>
+
+   <div class="field mb-2">
+    <div class="row">
+      <div class="col-3">
+        <%= f.label "郵便番号(ハイフンなし)", class:"mb-0" %>
+      </div>
+      <div class="col-3 offset-1  px-0">
+        <%= f.text_field :postal_code, autofocus: true, autocomplete: "postal_code", placeholder: "0000000", class:"w-100"; %>
+      </div>
+    </div>
+  </div>
+
+  <div class="field mb-2">
+   <div class="row">
+      <div class="col-3">
+        <%= f.label "住所", class:"mb-0" %>
+      </div>
+      <div class="col-7 offset-1  px-0">
+        <%= f.text_field :address, autofocus: true, autocomplete: "address", placeholder: "東京渋谷区代々木神園町0-0", class:"w-100"; %>
+      </div>
+    </div>
+  </div>
+
+  <div class="field mb-2">
+    <div class="row">
+      <div class="col-3">
+        <%= f.label "電話番号(ハイフンなし)", class:"mb-0" %>
+      </div>
+      <div class="col-3 offset-1 px-0">
+        <%= f.text_field :telephone_number, autofocus: true, autocomplete: "telephone_number", placeholder: "000000000", class:"w-100"; %>
+      </div>
+    </div>
+  </div>
+
+  <div class="field mb-2">
+    <div class="row">
+      <div class="col-3">
+        <%= f.label "パスワード(6文字以上)", class:"mb-0" %>
+      </div>
+      <div class="col-3 offset-1 px-0">
+        <%= f.password_field :password, autocomplete: "new-password", class: "w-100" %>
+      </div>
+    </div>
+  </div>
+
+  <div class="field mb-3">
+    <div class="row">
+      <div class="col-3">
+        <%= f.label "パスワード(確認用)", class:"mb-0" %>
+      </div>
+      <div class="col-3 offset-1 px-0">
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "w-100" %>
+      </div>
+    </div>
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <div class="row">
+      <%= f.submit "新規登録", class: "btn btn-success col-3 offset-4" %>
+    </div>
   </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+  <% end %>
+</div>
