--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,33 +1,65 @@
-<div>
-  <div>
-    <h2>注文履歴詳細</h2>
+<div class="container m-0 p-0">
+  <div class="row mb-3 align-items-center">
+    <div class="col-3 offset-md-1">
+      <h5 class="text-center m-0" style="background-color:whitesmoke;">注文履歴詳細</h5>
+    </div>
   </div>
-  <div>
-    <div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-2">
       <p>購入者</p>
+    </div>
+    <div class="col-2">
       <%= redirect_to admin_customer_path(@order.customer) do %>
-        <%= @order.last_name+@order.first_name %>
+        <%= @order.customer.last_name+@order.customer.first_name %>
       <% end %>
     </div>
-    <div>
+  </div>
+
+  <div class="row">
+    <div class="col-2">
       <p>注文日</p>
+    </div>
+    <div class="col-2">
       <%= l @order.created_at, format: :short %>
     </div>
-    <div>
+  </div>
+
+  <div class="row">
+    <div class="col-2">
       <p>配送先</p>
+    </div>
+    <div class="col-8">
       <p>〒<%= @order.postal_code %> <%= @order.address %><br>
       <%= @order.name %>
     </div>
-    <div>
+  </div>
+
+  <div class="row">
+    <div class="col-2">
       <p>支払方法</p>
+    </div>
+    <div class="col-2">
       <%= @order.payment_method %>
     </div>
-    <div>
+  </div>
+
+  <div class="row">
+    <div class="col-2">
       <p>注文ステータス</p>
-      <%= @order.order_status %>
     </div>
-    <div>
-      <table>
+    <div class="col-1">
+      <%= form_with model: [:admin, @order], local: true do |t| %>
+        <%= t.select :order_status, options_from_collection_for_select(Order.order_status) %>
+      <% end %>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-6">
+      <table class="table">
         <thead>
           <tr>
             <td>商品名</td>
@@ -51,19 +83,34 @@
         </tbody>
       </table>
     </div>
-  </div>
-  <div>
-    <div>
-      <p>商品合計</p>
-      <p><%= @order.total_payment-@order.postage %>円</p>
-    </div>
-    <div>
-      <p>送料</p>
-      <p><%= @order.postage %>円</p>
-    </div>
-    <div>
-      <p>請求金額</p>
-      <p><%= @order.total_payment %>円</p>
+
+    <div class="col-4 d-flex align-items-end">
+      <div class="row">
+        <div class="col-6">
+          <p>商品合計</p>
+        </div>
+        <div class="col-6">
+          <p><%= @order.total_payment-@order.postage %>円</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-6">
+          <p>送料</p>
+        </div>
+        <div class="col-6">
+          <p><%= @order.shipping_cost %>円</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-6">
+          <p>請求金額</p>
+        </div>
+        <div class="col-6">
+          <p><%= @order.total_payment %>円</p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
