--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,35 +1,45 @@
 <div class="container m-0 p-0">
-  <div class="row mb-4 align-items-center">
-    <div class="col-3 offset-2">
+  <div class="row mb-3 align-items-center">
+    <div class="col-3 offset-md-1">
       <h5 class="text-center m-0" style="background-color:whitesmoke;">会員一覧</h5>
     </div>
   </div>
 </div>
 
-<div class="d-flex justify-content-center">
-  <table class="table">
-    <thead>
-      <tr>
-        <th class="th">会員ID</th>
-        <th class="th">氏名</th>
-        <th class="th">メールアドレス</th>
-        <th class="th">ステータス</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @customers.each do |t| %>
-      <tr>
-        <td><%= link_to edit_admin_customer_path(t) do %><%= t.id %><% end %></td>
-        <td><%= t.last_name %><%= t.first_name %></td>
-        <td><%= t.email %></td>
-        <% if t.is_deleted == false %>
-          <td>有効</td>
-        <% else %>
-          <td>退会</td>
-        <% end %>
-      </tr>
-      <% end %>
-    </tbody>
-  </table>
-  <%= paginate @customers %>
+<div class="container">
+  <div class="row">
+    <div class="col-10 offset-1">
+      <table class="table">
+        <thead>
+          <tr>
+            <th class="th">会員ID</th>
+            <th class="th">氏名</th>
+            <th class="th">メールアドレス</th>
+            <th class="th">ステータス</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @customers.reverse_each do |t| %>
+          <tr>
+            <td><%= t.id %></td>
+            <td>
+              <%= link_to admin_customer_path(t) do %>
+                <%= t.last_name %><%= t.first_name %>
+              <% end %>
+            </td>
+            <td><%= t.email %></td>
+            <% if t.is_deleted == false %>
+              <td>有効</td>
+            <% else %>
+              <td>退会</td>
+            <% end %>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  <div class="d-flex justify-content-center">
+   <%= paginate @customers %>
+  </div>
 </div>
