--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -18,7 +18,7 @@
     <div class="row">
         <div class="col-4">
             <table class="table ml-md-5">
-                <thead class="thead">
+                <thead>
                     <tr>
                         <th>　　ジャンル</th>
                         <th></th>
