--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,32 +1,39 @@
-<div>
-  <div>
-    <h2>注文履歴一覧</h2>
+<div class="container m-0 p-0">
+  <div class="row mb-3 align-items-center">
+    <div class="col-3 offset-md-1">
+      <h5 class="text-center m-0" style="background-color:whitesmoke;">注文履歴一覧</h5>
+    </div>
   </div>
-  <div>
-    <table>
-      <thead>
-        <tr>
-          <td>購入日時</td>
-          <td>購入者</td>
-          <td>注文個数</td>
-          <td>注文ステータス</td>
-        </tr>
-      </thead>
-      <tbody>
-        <% @orders.each do |t| %>
+
+  <div class="row">
+    <div class="col-11 offset-md-1">
+      <table class="table">
+        <thead>
           <tr>
-            <td>
-              <%= link_to admin_order_path do %>
-                <%= l t.created_at %>
-              <% end %>
-            </td>
-            <td><%= t.customer.last_name+t.customer.first_name %></td>
-            <td><%= t.customer.id.cart_items.id.amount %></td>
-            <td><%= t.order_status %></td>
+            <th>購入日時</th>
+            <th>購入者</th>
+            <th>注文個数</th>
+            <th>注文ステータス</th>
           </tr>
-        <% end %>
-      </tbody>
-    </table>
+        </thead>
+        <tbody>
+          <% @orders.reverse_each do |t| %>
+            <tr>
+              <td>
+                <%= link_to admin_order_path do %>
+                  <%= l t.created_at %>
+                <% end %>
+              </td>
+              <td><%= t.customer.last_name+t.customer.first_name %></td>
+              <td><%= t.customer.id.cart_items.id.amount %></td>
+              <td><%= t.order_status %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  <div class="d-flex justify-content-center">
     <%= paginate @orders %>
   </div>
 </div>
