--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,45 +1,51 @@
 <div class="container m-0 p-0">
   <div class="row mb-5 align-items-center">
-    <div class="col-2 offset-md-2">
+    <div class="col-3 offset-md-1">
       <h5 class="text-center m-0" style="background-color:whitesmoke;">商品一覧</h5>
     </div>
-    <div class="offset-md-6">
+    <div class="offset-md-7">
       <button class="btn rounded-circle btn-outline-light shadow-sm">
       <%= link_to "＋", new_admin_item_path, class:"item-add text-secondary" %>
       </button>
     </div>
   </div>
 </div>
-  <div class="d-flex justify-content-center">
-    <table class="table">
-      <thead>
-        <tr>
-          <th>商品ID</th>
-          <th>商品名</th>
-          <th>税抜価格</th>
-          <th>ジャンル</th>
-          <th>ステータス</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @items.each do |t| %>
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+      <table class="table table-borderless">
+        <thead>
           <tr>
-            <td><%= t.id %></td>
-            <td>
-              <%= link_to admin_item_path(t) do %>
-              <%= t.name %>
-              <% end %>
-            </td>
-            <td><%= t.price %></td>
-            <td><%= t.genre.name %></td>
-            <% if t.is_active == true %>
-              <td class="text-success">販売中</td>
-            <% else %>
-              <td class="text-secondary">販売停止</td>
-            <% end %>
+            <th>商品ID</th>
+            <th>商品名</th>
+            <th>税抜価格</th>
+            <th>ジャンル</th>
+            <th>ステータス</th>
           </tr>
-        <% end %>
-      </tbody>
-    </table>
+        </thead>
+        <tbody>
+          <% @items.reverse_each do |t| %>
+            <tr>
+              <td><%= t.id %></td>
+              <td>
+                <%= link_to admin_item_path(t) do %>
+                <%= t.name %>
+                <% end %>
+              </td>
+              <td><%= t.price %></td>
+              <td><%= t.genre.name %></td>
+              <% if t.is_active == true %>
+                <td class="text-success">販売中</td>
+              <% else %>
+                <td class="text-secondary">販売停止</td>
+              <% end %>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  <div class="d-flex justify-content-center">
     <%= paginate @items %>
   </div>
+</div>
