--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,32 +21,38 @@
   box-sizing:border-box;
 }
 
-h5{
+.page-name{
   font-size:24px;
 }
 html, body{
   height:100%;
 }
 
+header{
+  height:17%;
+}
+
 nav{
+  height:100%;
   border:1px solid black;
 }
 
 body{
   margin:5px;
-  border:1px solid black;
 }
 
 
 .nav-logo{
   font-size:30px;
-  padding:8px 20px;
+  padding:10px 50px;
   border:1px solid black;
 }
 
 main{
   padding:30px;
-  height:85%;
+  height:73%;
+  border-left:1px solid black;
+  border-right:1px solid black;
 }
 
 .nav-item{
@@ -54,4 +60,19 @@ main{
   padding:3px 0;
   border-radius:3px;
   margin-right:20px;
+}
+
+.link-item .nav-item:last-child{
+  margin-right:0;
+}
+
+.serch-button{
+
+  width:230px;
+  height:32px;
+}
+
+footer{
+  height:10%;
+  border:1px solid black;
 }
