--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container m-0 p-0">
   <div class="row mb-5 align-items-center">
-    <div class="col-3 offsetmd-1">
-      <h5 class="text-center m-0" style="background-color:whitesmoke;">商品新規登録</h5>
+    <div class="col-3 offsetmd-2">
+      <h5 class="page-name text-center m-0" style="background-color:whitesmoke;">商品新規登録</h5>
     </div>
   </div>
 </div>
