--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container m-0 p-0">
   <div class="row mb-3 align-items-center">
-    <div class="col-3 offset-md-1">
-      <h5 class="text-center m-0" style="background-color:whitesmoke;">注文履歴詳細</h5>
+    <div class="col-3 offset-md-2">
+      <h5 class="page-name text-center m-0" style="background-color:whitesmoke;">注文履歴詳細</h5>
     </div>
   </div>
 </div>
