--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -1,2 +1,56 @@
-<h1>Customers#show</h1>
-<p>Find me in app/views/customers/show.html.erb</p>
+<div class="container m-0 p-0">
+  <div class="row mb-3">
+    <div class="col-2 offset-md-2">
+      <h5 class="page-name text-center m-0" style="background-color:whitesmoke;">マイページ</h5>
+    </div>
+  </div>
+
+  <div class="my-page">
+    <div class=" row mb-2">
+      <div class="col-1">
+        <h5 class="mr-2"><strong>登録情報</strong></h5>
+      </div>
+        <%= link_to "編集する", edit_customer_path(@customer), class:"btn btn-success px-4 py-2" %>
+    </div>
+    <div class="customer-deta row">
+      <table class="table col-7 mb-3">
+        <tr>
+          <th>氏名</th>
+          <td><%= @customer.last_name %>　<%= @customer.first_name %></td>
+        </tr>
+        <tr>
+          <th>カナ</th>
+          <td><%= @customer.last_name_kana %>　<%= @customer.first_name_kana %></td>
+        </tr>
+        <tr>
+          <th>郵便番号</th>
+          <td><%= @customer.postal_code %></td>
+        </tr>
+        <tr>
+          <th>住所</th>
+          <td><%= @customer.address %></td>
+        </tr>
+        <tr>
+          <th>電話番号</th>
+          <td><%= @customer.telephone_number %></td>
+        </tr>
+        <tr>
+          <th>メールアドレス</th>
+          <td><%= @customer.email %></td>
+        </tr>
+      </table>
+    </div>
+    <div class="row mb-2">
+      <div class="col-1">
+        <h5 class="mr-2"><strong>配送先</strong></h5>
+      </div>
+      <%= link_to "一覧を見る", addresses_path, class:"btn btn-primary px-4 py-2" %>
+    </div>
+    <div class="row mb-2">
+      <div class="col-1">
+        <h5 class="mr-2"><strong>注文履歴</strong></h5>
+      </div>
+      <%= link_to "一覧を見る", orders_oath,  class:"btn btn-primary px-4 py-2" %>
+    </div>
+  </div>
+</div>
