--- a/app/views/customers/unsubscribe.html.erb
+++ b/app/views/customers/unsubscribe.html.erb
@@ -1,2 +1,11 @@
-<h1>Customers#unsubscribe</h1>
-<p>Find me in app/views/customers/unsubscribe.html.erb</p>
+<div class="w-100 h-100 d-flex justify-content-center">
+  <div class="confirm-text">
+    <p class="m-3"><storng>本体に退会しますか？</storng></p>
+    <p>退会すると、会員登録情報や<br>
+    これまでの購入履歴が閲覧できなくなります。<br>
+    退会する場合は、「退会する」をクリックしてください。
+    </p>
+  </div>
+  <%= link_to "退会しない", my_page_path, class:"btn btn-primary px-4 py-2 mr-2" %>
+  <%= link_to "退会する",withdraw_customers_path, class:"btn btn-danger px-4 py-2", method: :patch %>
+</div>
