--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container m-0 p-0">
   <div class="row mb-4 align-items-center">
     <div class="col-3 offset-2">
-      <h5 class="text-center m-0" style="background-color:whitesmoke;">新規会員登録</h5>
+      <h5 class="page-name text-center m-0" style="background-color:whitesmoke;">新規会員登録</h5>
     </div>
   </div>
 </div>
@@ -15,13 +15,13 @@
       <div class="col-3">
         <p class="pt-1 mb-0">名前</p>
       </div>
-      <div class="col-1 text-right pr-1">
+      <div class="col-1 pr-1">
         <%= f.label "(姓)", class:"mb-0" %>
       </div>
       <div class="col-3 px-0">
         <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name", placeholder: "令和", class:"w-100"; %>
       </div>
-      <div class="col-1 text-right  pr-1">
+      <div class="col-1 pr-1">
         <%= f.label "(名)", class:"mb-0" %>
       </div>
       <div class="col-3  px-0">
@@ -35,13 +35,13 @@
       <div class="col-3">
         <p class="pt-1 mb-0">フリガナ</p>
       </div>
-      <div class="col-1 text-right  pr-1">
+      <div class="col-1 pr-1">
         <%= f.label "(セイ)", class:"mb-0" %>
       </div>
       <div class="col-3  px-0">
         <%= f.text_field :last_name_kana, autofocus: true, autocomplete: "last_name_kana", placeholder: "レイワ", class:"w-100"; %>
       </div>
-      <div class="col-1 text-right  pr-1">
+      <div class="col-1 pr-1">
         <%= f.label "(メイ)", class:"mb-0" %>
       </div>
       <div class="col-3  px-0">
@@ -122,4 +122,17 @@
     </div>
   </div>
   <% end %>
+</div>
+
+<div class="container m-0 p-0">
+  <div class="row mb-4 align-items-center">
+    <div class="col-4 offset-1">
+      <h5 class="text-center m-0" style="background-color:whitesmoke;">既に登録済みの方</h5>
+    </div>
+  </div>
+  <div class="row">
+    <div class="offset-2">
+      <p><%= link_to "こちら", new_customer_session_path %>　からログインしてください。</p>
+    </div>
+  </div>
 </div>
