--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,1 +1,54 @@
-<h1>Hella</h1>
+<div class="container">
+  <div class="row">
+   <div class="search-genre col-2">
+      <table class="table table-borderless">
+        <thead>
+          <tr>
+            <th>ジャンル検索</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @genres.reverse_each do |t| %>
+          <tr>
+            <td><%= t.name %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+    <div class="top-text col-9 offset-1">
+      <div class="d-flex justify-content-centr align-items-center">
+        <div class="top-text my-ato">
+          <p>ようこそ、ながのケーキへ！<br>
+          このサイトは、ケーキ販売のECサイトになります。<br>
+          会員でない人も商品の閲覧はできますが、<br>
+          購入には会員登録が必要になります。
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-4 offset-md-3">
+      <h4>新着商品</h4>
+    </div>
+  </div>
+  <div class="row">
+    <% @items.each do |t| %>
+    <div class="col-3 offset-md-3">
+      <%= attachment_image_tag t, :image, size:"200x200", format:'jpeg' %>
+      <div class="row">
+        <%= t.name %>
+      </div>
+      <div class="row">
+        <%= t.price %>
+      </div>
+    </div>
+    <% end %>
+  </div>
+  <div class="row justify-content-end">
+    <p>
+      <%= link_to "全ての商品を見る", items_path %>
+    </p>
+  </div>
+</div>
