--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -19,7 +19,7 @@
           </tr>
         </thead>
         <tbody>
-          <% @customers.reverse_each do |t| %>
+          <% @customers.each do |t| %>
           <tr>
             <td><%= t.id %></td>
             <td>
