--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -17,7 +17,7 @@
           </tr>
         </thead>
         <tbody>
-          <% @orders.reverse_each do |t| %>
+          <% @orders.each do |t| %>
             <tr>
               <td>
                 <%= link_to admin_order_path do %>
