--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,22 +1,23 @@
-<div class="container">
+<div class="container d-flex">
+  <div class="search-genre h-100">
+    <table class="table table-borderless">
+      <thead>
+        <tr>
+          <th>ジャンル検索</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @genres.reverse_each do |t| %>
+        <tr>
+          <td><%= t.name %></td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+
   <div class="row">
-   <div class="search-genre col-2">
-      <table class="table table-borderless">
-        <thead>
-          <tr>
-            <th>ジャンル検索</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @genres.reverse_each do |t| %>
-          <tr>
-            <td><%= t.name %></td>
-          </tr>
-          <% end %>
-        </tbody>
-      </table>
-    </div>
-    <div class="top-text col-9 offset-1">
+    <div class="top-text col-9 ">
       <div class="d-flex justify-content-centr align-items-center">
         <div class="top-text my-ato">
           <p>ようこそ、ながのケーキへ！<br>
@@ -28,15 +29,16 @@
       </div>
     </div>
   </div>
+
   <div class="row">
-    <div class="col-4 offset-md-3">
-      <h4>新着商品</h4>
+    <div class="col-4">
+      <h4><strong>新着商品</strong></h4>
     </div>
   </div>
   <div class="row">
     <% @items.each do |t| %>
-    <div class="col-3 offset-md-3">
-      <%= attachment_image_tag t, :image, size:"200x200", format:'jpeg' %>
+    <div class="col-3">
+      <%= attachment_image_tag t, :image, size:"200x150", format:'jpeg' %>
       <div class="row">
         <%= t.name %>
       </div>
