--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,2 +1,38 @@
-<h1>Items#index</h1>
-<p>Find me in app/views/items/index.html.erb</p>
+<div class="container d-flex">
+  <div class="search-genre h-100">
+    <table class="table table-borderless">
+      <thead>
+        <tr>
+          <th>ジャンル検索</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @genres.reverse_each do |t| %>
+        <tr>
+          <td><%= t.name %></td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+  <div class="row">
+    <h3 class="d-inline">商品一覧</h3>
+    <h4 class="d-inline">（全<%= @items.count %>件）</h4>
+  </div>
+  <div class="row d-wrap">
+    <% @items.each do |t| %>
+    <div class="col-3">
+      <%= attachment_image_tag t, :image, size:"200x150", format:'jpeg' %>
+      <div class="row">
+        <%= t.name %>
+      </div>
+      <div class="row">
+        <%= t.price %>
+      </div>
+    </div>
+    <% end %>
+  </div>
+  <div class="row justify-content-center">
+    <%= paginate @items %>
+  </div>
+</div>
