--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,2 +1,46 @@
-<h1>Items#show</h1>
-<p>Find me in app/views/items/show.html.erb</p>
+<div class="container d-flex">
+  <div class="search-genre h-100">
+    <table class="table table-borderless">
+      <thead>
+        <tr>
+          <th>ジャンル検索</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @genres.reverse_each do |t| %>
+        <tr>
+          <td><%= t.name %></td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+
+  <div class="row item">
+    <div class="row item-text">
+      <div clss="col-5">
+        <%= attachment_image_tag :image, class:"w-100", format: "jpeg" %>
+      </div>
+      <div class="col-7">
+        <div class="row">
+          <h5><%= @item.name %></h5>
+        </div>
+        <div class="row">
+          <%= @item.introduction %>
+        </div>
+        <div class="align-items-end">
+          <h6>¥<%= @item.price %>(税込)</h6>
+        </div>
+      </div>
+    </div>
+    <div class="item-price">
+      <div class="row">
+        <%= form_with model: @cart_item, url: cart_item_path, local: true do |t| %>
+        <%= t.hidden_field :item_id, value: @item.id %>
+        <%= t.select :amount, *[1..10], placeholder: "個数選択", class:"col-3 offset-md-5" %>
+        <%= t.submit "カートに入れる", class:"btn btn-success px-4 py-2 col-3 offset-1" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
